--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
         <repository>
+            <id>papermc</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
+        <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
@@ -85,6 +89,12 @@
             <groupId>com.github.justinmtech</groupId>
             <artifactId>Aqua</artifactId>
             <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.seeseemelk</groupId>
+            <artifactId>MockBukkit-v1.13</artifactId>
+            <version>0.2.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
